--- a/notes.org
+++ b/notes.org
@@ -1,19 +1,21 @@
 * Re-Keyboard Developer Notes                                             :TOC:
   - [[#introduction][Introduction]]
-  - [[#other-related-projects][Other related projects]]
+  - [[#functionality][Functionality]]
+  - [[#references][References]]
 
 ** Introduction
 This project is experimental (worst than alpha) work in progress.
 
 Only use this code as an example of an incomplete project.
 
-** Other related projects
+*** Other related projects
+**** Collated list of reMarkable software
+Go here first. This site contains a colated list of useful tools for use with
+the reMarkable table
 
-*** Collated list of reMarkable software
-Go here first. 
 See: https://github.com/reHackable/awesome-reMarkable
 
-*** funkey/recept
+**** funkey/recept
 Project that intercepts and smooths pen strokes via overloading the 'open' system call with LD_PRELOAD.
 
 See: https://github.com/funkey/recept
@@ -35,3 +37,6 @@ type == 3 && code == 25 -> value == distance
 type == 3 && code == 26 -> value == tilt x
 type == 3 && code == 27 -> value == tilt y
 
+** Functionality
+
+** References
